--- a/Code/configuration/CMakeLists.txt
+++ b/Code/configuration/CMakeLists.txt
@@ -4,3 +4,6 @@
 # license in the file LICENSE.
 
 add_library(hemelb_configuration OBJECT CommandLine.cc SimConfig.cc SimBuilder.cc)
+
+target_link_libraries(hemelb_configuration PRIVATE
+VTK::CommonCore VTK::CommonDataModel VTK::IOXML VTK::FiltersCore)
